--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ main .hero {
 }
 
 main .hero .header {
-  padding-top: 3rem;
+  padding-top: 5%;
   font-weight: var(--fw-700);
   font-size: var(--fs-xl);
   line-height: 8.8vw;
