--- a/styles.scss
+++ b/styles.scss
@@ -75,7 +75,7 @@ main{
         align-items: center;
         justify-content: center;
         .header{
-            padding-top: 3rem;
+            padding-top: 5%;
             font-weight: var(--fw-700);
             font-size: var(--fs-xl);
             line-height:8.8vw;
