--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,11 @@
   --fw-400:400;
   --fs-sm:Clamp(.7rem, 1.2vw + 1rem, 1.2vw);
   --fs-xl:Clamp(4vw, 8.9vw + 1rem ,8.9vw);
-  --fs-md:Clamp(.8rem, 1.4vw + 1rem ,1.45vw );
+  --fs-md:Clamp(.9rem, 1.4vw + 1rem ,1.45vw );
   --lg-w:Clamp(4vw, 8vw + 1rem ,8vw);
   --btn-img-w:Clamp(9vw,18vw + 1rem,18vw);
+  --phones-w:Clamp(35vw,60vw + 1rem, 60vw)
+;
 }
 
 * {
@@ -23,6 +25,7 @@
 html {
   color: var(--clr-black) !important;
   font-family: var(--ff) !important;
+  scroll-behavior: smooth;
 }
 
 nav {
@@ -74,12 +77,12 @@ a {
 }
 
 main {
-  padding-top: 10%;
   background: var(--clr-green);
   overflow-x: hidden !important;
 }
 
 main .hero {
+  padding-top: 10%;
   width: 100vw;
   text-align: center;
   display: -webkit-box;
@@ -109,7 +112,7 @@ main .hero .header {
 
 main .hero .lead-container {
   color: var(--clr-white);
-  padding: 3rem 0;
+  padding: 3vw 0;
 }
 
 main .hero .lead-container .first {
@@ -125,13 +128,24 @@ main .download {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 2rem 0rem;
+  padding: 1.5vw 0rem;
   gap: 2rem;
 }
 
 main .download img {
   width: var(--btn-img-w);
   cursor: pointer;
+}
+
+main .image {
+  margin-top: 3rem;
+  overflow: hidden !important;
+}
+
+main .image .phones {
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  width: var(--phones-w);
 }
 
 @media (max-width: 760px) {
