--- a/styles.scss
+++ b/styles.scss
@@ -14,9 +14,10 @@
     --fs-xl:Clamp(4vw, 8.9vw + 1rem ,8.9vw);
     // --fs-xl:8.8vw;
     // --fs-md:1.4vw;
-    --fs-md:Clamp(.8rem, 1.4vw + 1rem ,1.45vw );
+    --fs-md:Clamp(.9rem, 1.4vw + 1rem ,1.45vw );
     --lg-w:Clamp(4vw, 8vw + 1rem ,8vw);
     --btn-img-w:Clamp(9vw,18vw + 1rem,18vw);
+    --phones-w:Clamp(35vw,60vw + 1rem, 60vw)
 }
 *{
     margin:0;
@@ -26,6 +27,7 @@
 html{
     color: var(--clr-black) !important;
     font-family:var(--ff) !important;
+    scroll-behavior: smooth;
 }
 nav{
     position: fixed;
@@ -64,10 +66,10 @@ a{
 
 }
 main{
-    padding-top: 10%;
     background: var(--clr-green);
     overflow-x: hidden !important;
     .hero{
+        padding-top: 10%;
         width:100vw;
         text-align: center;
         display: flex;
@@ -86,7 +88,7 @@ main{
         }
         .lead-container{
             color: var(--clr-white);
-            padding: 3rem 0;
+            padding: 3vw 0;
         .first{
             word-spacing: .4rem;
         }
@@ -101,11 +103,19 @@ main{
     }
     .download{
         display: flex;
-        padding: 2rem 0rem;
+        padding: 1.5vw 0rem;
         gap:2rem;
         img{
             width:var(--btn-img-w);
             cursor: pointer;
+        }
+    }
+    .image{
+        margin-top: 3rem;
+        overflow: hidden !important;
+        .phones{
+            transform: translateY(10px);
+            width: var(--phones-w);
         }
     }
 }
