--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   --clr-green:#029f58;
   --clr-white:#FFFF;
   --clr-black:#000;
+  --clr-orange:#ffbb62;
   --ff:'DM Sans', sans-serif;
   --fw-700:700;
   --fw-500:500;
