--- a/styles.scss
+++ b/styles.scss
@@ -3,6 +3,7 @@
     --clr-white:#FFFF;
     --clr-black:#000;
     --clr-orange:#ffbb62;
+    --clr-gray:gray;
 
     --ff:'DM Sans', sans-serif;
 
@@ -20,7 +21,8 @@
     --lg-w:Clamp(4vw, 8vw + 1rem ,8vw);
     --btn-img-w:Clamp(9vw,18vw + 1rem,18vw);
     --phones-w:Clamp(45vw,90vw + 1rem, 90vw);
-    --h1-w:Min(90%,30rem)
+    --h1-w:Min(90%,30rem);
+    --p-w:Min(90%,40rem)
 }
 *{
     margin:0;
@@ -125,11 +127,18 @@ main{
     .feature{
         background: var(--clr-white);
         padding: 10%;
-        h3{
+        h1{
             font-size: var(--fs-lg);
             width:var(--h1-w);
             color: var(--clr-green);
             line-height: 5vw;
+            font-weight: var(--fw-500);
+        }
+        .lead{
+            width:var(--p-w);
+            padding-top: 2vw;
+            color: var(--clr-gray);
+            font-size: var(--fs-sm);
         }
     }
 }
