--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   --fs-xl:Clamp(4vw, 8.9vw + 1rem ,8.9vw);
   --fs-md:Clamp(.7rem, 1.4vw + 1rem ,1.45vw );
   --fs-lg:Clamp(3vw, 5vw + 1rem,5vw);
-  --fs-regular:Clamp(1.1rem,1.35vw + 1rem , 1.35vw);
+  --fs-regular:Clamp(.8rem,1.35vw + 1rem , 1.35vw);
   --lg-w:Clamp(4vw, 8vw + 1rem ,8vw);
   --btn-img-w:Clamp(9vw,18vw + 1rem,18vw);
   --phones-w:Clamp(45vw,90vw + 1rem, 90vw);
