--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   --fw-700:700;
   --fw-500:500;
   --fw-400:400;
-  --fs-sm:Clamp(.6rem, 1.2vw + 1rem, 1.2vw);
+  --fs-sm:Clamp(.7rem, 1.3vw + 1rem, 1.3vw);
   --fs-xl:Clamp(4vw, 8.9vw + 1rem ,8.9vw);
   --fs-md:Clamp(.7rem, 1.4vw + 1rem ,1.45vw );
   --fs-lg:Clamp(3vw, 5vw + 1rem,5vw);
@@ -158,6 +158,7 @@ main .image .phones {
 main .feature {
   background: var(--clr-white);
   padding: 10%;
+  overflow: hidden;
 }
 
 main .feature h1 {
@@ -173,6 +174,36 @@ main .feature .lead {
   padding-top: 2vw;
   color: var(--clr-gray);
   font-size: var(--fs-regular);
+}
+
+main .feature .container {
+  position: relative;
+  z-index: 1000;
+}
+
+main .feature .container .text {
+  position: relative;
+  z-index: 1000;
+}
+
+main .feature .container img {
+  position: absolute;
+}
+
+main .feature .container .big {
+  right: -7vw;
+  top: -19vw;
+  width: 30vw;
+  overflow-y: hidden !important;
+  z-index: -1;
+  -webkit-transform: rotate(20deg);
+          transform: rotate(20deg);
+}
+
+main .feature .container .small {
+  left: -4.3vw;
+  top: -6.2vw;
+  width: 10.5vw;
 }
 
 @media (max-width: 760px) {
