--- a/styles.scss
+++ b/styles.scss
@@ -12,7 +12,7 @@
     --fw-400:400;
     
 
-    --fs-sm:Clamp(.6rem, 1.2vw + 1rem, 1.2vw);
+    --fs-sm:Clamp(.7rem, 1.3vw + 1rem, 1.3vw);
     --fs-xl:Clamp(4vw, 8.9vw + 1rem ,8.9vw);
     --fs-md:Clamp(.7rem, 1.4vw + 1rem ,1.45vw );
     --fs-lg:Clamp(3vw, 5vw + 1rem,5vw);
@@ -128,6 +128,7 @@ main{
     .feature{
         background: var(--clr-white);
         padding: 10%;
+        overflow: hidden;
         h1{
             font-size: var(--fs-lg);
             width:var(--h1-w);
@@ -140,6 +141,32 @@ main{
             padding-top: 2vw;
             color: var(--clr-gray);
             font-size: var(--fs-regular);
+        }
+        .container{
+            position: relative;
+            z-index: 1000;
+            .text{
+            position: relative;
+            z-index: 1000;
+            }
+            img{
+                position: absolute;
+            }
+            .big{
+                right:-7vw;
+                top:-19vw;
+                width:30vw;
+                overflow-y: hidden !important;
+                z-index: -1;
+                transform: rotate(20deg)
+            }
+            .small{
+                left:-4.3vw;
+                top:-6.2vw;
+                width:10.5vw
+            }
+
+
         }
     }
 }
