--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,28 @@ main .feature .container .small {
   width: 10.5vw;
 }
 
+main .fans {
+  padding: 2% 10% 2% 10%;
+  background: var(--clr-white);
+}
+
+main .fans .btn {
+  background: var(--clr-orange);
+  width: 7vw;
+  text-align: center;
+  border-radius: 2.5vw;
+  padding: .2vw 0;
+  text-transform: capitalize;
+}
+
+main .fans .btnText {
+  font-size: var(--fs-md);
+}
+
+main .fans .header {
+  font-size: 4vw;
+}
+
 @media (max-width: 760px) {
   nav .nav-items li {
     margin-right: 2rem;
