--- a/styles.scss
+++ b/styles.scss
@@ -169,6 +169,24 @@ main{
 
         }
     }
+    .fans{
+        padding:2% 10% 2% 10%;
+        background: var(--clr-white);
+        .btn{
+            background: var(--clr-orange);
+            width:7vw;
+            text-align: center;
+            border-radius: 2.5vw;
+            padding: .2vw 0;
+            text-transform: capitalize;
+        }
+        .btnText{
+            font-size: var(--fs-md);
+        }
+        .header{
+            font-size: 4vw;
+        }
+    }
 }
 
 
