--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,9 @@ main .fans .btnText {
 }
 
 main .fans .header {
-  font-size: 4vw;
+  font-size: 5vw;
+  padding-top: 2vw;
+  font-weight: var(--fw-500);
 }
 
 @media (max-width: 760px) {
