--- a/styles.scss
+++ b/styles.scss
@@ -17,13 +17,15 @@
     --fs-md:Clamp(.7rem, 1.4vw + 1rem ,1.45vw );
     --fs-lg:Clamp(3vw, 5vw + 1rem,5vw);
     --fs-regular:Clamp(.8rem,1.35vw + 1rem , 1.35vw);
+    --fs-header:Clamp(2.4vw,4.88vw + 1rem, 4.88vw);
 
     
     --lg-w:Clamp(4vw, 8vw + 1rem ,8vw);
     --btn-img-w:Clamp(9vw,18vw + 1rem,18vw);
     --phones-w:Clamp(45vw,90vw + 1rem, 90vw);
     --h1-w:Min(90%,30rem);
-    --p-w:Min(90%,40rem)
+    --p-w:Min(90%,40rem);
+    --btn-w:Clamp(3rem, 7vw + 1rem,7vw)
 }
 *{
     margin:0;
@@ -170,11 +172,17 @@ main{
         }
     }
     .fans{
+        display: flex;
+        align-items: center;
+        gap: 8rem;
         padding:2% 10% 2% 10%;
         background: var(--clr-white);
+        .container{
+            width: 50%;
+        }
         .btn{
             background: var(--clr-orange);
-            width:7vw;
+            width:var(--btn-w);
             text-align: center;
             border-radius: 2.5vw;
             padding: .2vw 0;
@@ -184,9 +192,26 @@ main{
             font-size: var(--fs-md);
         }
         .header{
-            font-size: 5vw;
+            font-size:var(--fs-header);
             padding-top: 2vw;
             font-weight: var(--fw-500);
+            line-height: 5.4vw;
+            opacity: .9;
+        }
+        .lead{
+            padding-top: 5%;
+            color: var(--clr-gray);
+            font-size: var(--fs-md);
+        }
+        .influencer{
+            width: 50%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            img{
+                width: 29vw;
+            }
+
         }
     }
 }
@@ -199,6 +224,22 @@ main{
         .nav-items{
             li{
                 margin-right: 2rem;
+            }
+        }
+    }
+    main {
+        .fans{
+            flex-wrap: wrap;
+            gap:1rem;
+            .container{
+                width: 100%;
+            }
+            .influencer{
+                width: 100%;
+                justify-content: center;
+                img{
+                    width:50vw
+                }
             }
         }
     }
