--- a/styles.scss
+++ b/styles.scss
@@ -18,6 +18,7 @@
     --fs-lg:Clamp(3vw, 5vw + 1rem,5vw);
     --fs-regular:Clamp(.8rem,1.35vw + 1rem , 1.35vw);
     --fs-header:Clamp(2.4vw,4.88vw + 1rem, 4.88vw);
+    --fs-btn:Clamp(.6vw, 1.2vw + 1rem, 1.2vw);
 
     
     --lg-w:Clamp(4vw, 8vw + 1rem ,8vw);
@@ -175,9 +176,8 @@ main{
         display: flex;
         align-items: center;
         gap: 8rem;
-        padding:2% 10% 2% 10%;
+        padding:10%;
         background: var(--clr-white);
-        padding-bottom: 10%;
         width: 100%;
 
 
@@ -194,7 +194,8 @@ main{
             text-transform: capitalize;
         }
         .btnText{
-            font-size: var(--fs-md);
+            font-size: var(--fs-btn);
+            padding: .4vw 0;
         }
         .header{
             font-size:var(--fs-header);
@@ -225,7 +226,7 @@ main{
         background: var(--clr-green);
        
         .text{
-            padding:0% 10% 2% 10%;
+            padding:0% 8% 2% 10%;
             width: 50%;
             background: var(--clr-green);
             .btn{
@@ -237,7 +238,8 @@ main{
     
             }
             .btnText{
-                font-size: var(--fs-md);
+                font-size: var(--fs-btn);
+                padding: .4vw 0;
             }
             
             .wrapper{
@@ -245,7 +247,16 @@ main{
                 justify-content: space-between;
                 align-items: center;
                 img{
-                    width: 4vw;
+                    width: 4.5vw;
+                }
+            }
+            .container{
+                padding-top: 7%;
+                color: var(--clr-white);
+                h1{
+                    font-size: var(--fs-header);
+                    font-weight: var(--fw-500);
+                    line-height: var(--fs-header);
                 }
             }
 
