--- a/styles.css
+++ b/styles.css
@@ -87,11 +87,11 @@ a {
 }
 
 main {
-  background: var(--clr-green);
   overflow-x: hidden !important;
 }
 
 main .hero {
+  background: var(--clr-green);
   padding-top: 10%;
   width: 100vw;
   text-align: center;
@@ -236,6 +236,7 @@ main .fans .btn {
 
 main .fans .btnText {
   font-size: var(--fs-btn);
+  font-weight: var(--fw-500);
   padding: .4vw 0;
 }
 
@@ -277,11 +278,12 @@ main .chat {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: var(--clr-green);
+  margin-top: 3rem;
+  background: var(--clr-white);
 }
 
 main .chat .text {
-  padding: 0% 8% 2% 10%;
+  padding: 8%;
   width: 50%;
   background: var(--clr-green);
 }
@@ -296,6 +298,7 @@ main .chat .text .btn {
 
 main .chat .text .btnText {
   font-size: var(--fs-btn);
+  font-weight: var(--fw-500);
   padding: .4vw 0;
 }
 
@@ -324,6 +327,11 @@ main .chat .text .container h1 {
   font-size: var(--fs-header);
   font-weight: var(--fw-500);
   line-height: var(--fs-header);
+}
+
+main .chat .text .container .lead {
+  padding-top: 5%;
+  font-size: var(--fs-md);
 }
 
 main .chat .chat-area {
