--- a/styles.scss
+++ b/styles.scss
@@ -76,9 +76,9 @@ a{
 
 }
 main{
-    background: var(--clr-green);
     overflow-x: hidden !important;
     .hero{
+        background: var(--clr-green);
         padding-top: 10%;
         width:100vw;
         text-align: center;
@@ -195,6 +195,7 @@ main{
         }
         .btnText{
             font-size: var(--fs-btn);
+            font-weight: var(--fw-500);
             padding: .4vw 0;
         }
         .header{
@@ -223,10 +224,10 @@ main{
     .chat{
         display: flex;
         align-items: center;
-        background: var(--clr-green);
-       
+        margin-top: 3rem;
+        background: var(--clr-white);
         .text{
-            padding:0% 8% 2% 10%;
+            padding:8%;
             width: 50%;
             background: var(--clr-green);
             .btn{
@@ -239,6 +240,7 @@ main{
             }
             .btnText{
                 font-size: var(--fs-btn);
+                font-weight: var(--fw-500);
                 padding: .4vw 0;
             }
             
@@ -257,6 +259,10 @@ main{
                     font-size: var(--fs-header);
                     font-weight: var(--fw-500);
                     line-height: var(--fs-header);
+                }
+                .lead{
+                    padding-top: 5%;
+                    font-size: var(--fs-md);
                 }
             }
 
