--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,7 @@ main .fans {
       -ms-flex-align: center;
           align-items: center;
   gap: 8rem;
-  padding: 10%;
+  padding: 5% 10% 10% 10%;
   background: var(--clr-white);
   width: 100%;
 }
