--- a/styles.scss
+++ b/styles.scss
@@ -176,7 +176,7 @@ main{
         display: flex;
         align-items: center;
         gap: 8rem;
-        padding:10%;
+        padding:5% 10% 10% 10%;
         background: var(--clr-white);
         width: 100%;
 
