--- a/styles.scss
+++ b/styles.scss
@@ -312,7 +312,20 @@ main{
                     border-top-left-radius: 1vw;
                     border-top-right-radius: 1vw;
                     border-bottom-right-radius: 1vw;
-                    margin-top: 1.5vw;
+                    margin: 1.5vw 0;
+                    small{
+                        font-size: .9vw;
+                    }
+                }
+                .third{
+                    width: 25vw;
+                    padding: 1vw;
+                    background: var(--clr-white);
+                    font-size: var(--fs-regular);
+                    border-top-left-radius: 1vw;
+                    border-top-right-radius: 1vw;
+                    border-bottom-right-radius: 1vw;
+                    margin: 1.5vw 0;
                     small{
                         font-size: .9vw;
                     }
